cluster-logging/overlays/moc/zero/routes/route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: elasticsearch
    namespace: openshift-logging
spec:
    host: null
    to:
        kind: Service
        name: elasticsearch
    tls:
        termination: reencrypt
        destinationCACertificate: ENC[AES256_GCM,data:t0vJMfOAAaPM7SMow8P82s5YuNPEpatkELPixYCUf+BI8tVy+OYpqvgu5oLWMU720Bw1CJDVpH5B6/1qFTHa6Y04WR8BGk/9K8AU08qCikFV/rEqJ5SiB1O9Y0MahFpVCeipX5aG7B304OsQL2TqsCQoN+aNczQoJT9LxIQNZk4w/UEyMhTHQTeMGpOYjF1viFk2LwjSAYFFeuwoCiO4E7wOceV8chsV3nzrbCzRsjNkv10ZUp2JTb2GfqhJ3m/VESlFWHNkbUTohbPLQe5hQfyKStD8xsTrmKnd68IjLlUlgPZxSTi2kZjAG2kvOvezarXMKe6mLmWRFCZ+er5f4/dlGSdRJ63eJqAd+tVeAiwFBc+mZjSoJ0iYM66CK++XSqJr03AQG/dERf2REi/tC67+o0hsZB44QVw+ACp1uQb0l7b8F/OPqBJR9y5DwL [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-03-25T13:49:40Z'
    mac: ENC[AES256_GCM,data:LiPVyclLKO5hQ4gV34ULozWiyqNtMEGd49eqhpaCfhuxdjbtojy8DobsUntJ7+ZFFxeeQ882LgJMOL7k2TJdwV1B6BzybydFdXE3Cn1/6Pc6Fi0q1tDjDqMcmhXMMg/INuez/o/w3P7eDcixR1Ia2nvfr0W6e/TAFYMTCsNlhas=,iv:Y35TLD3CfGh9/XTVp2N7jAxg82HJHXiDoiBIQkpKTWU=,tag:qxOT/kds02r/xmnOi6aEMg==,type:str]
    pgp:
    -   created_at: '2021-03-25T13:49:39Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ//bTPRKQuQADQnhHQ7/X5gDGufL0l/97xwOiUgbBWoTrJw
[...]
            =6jn4
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^destinationCACertificate$
    version: 3.6.1
